# prompt

./: Cargo.toml  Gemfile  Guardfile  README.md  prompt_ben.zsh  prompt_ben_setup  test_prompt.sh  tmux.sh
old/: net.rs  style.rs  user.rs
old/prompt/: hook.rs  term.rs  vcs.rs
old/prompt/git/: raw.rs
scripts/: build-all.sh  release.sh
src/: git.rs  lib.rs  main.rs  mux.rs  net.rs  paths.rs  preprompt.rs  prompt.rs  style.rs  title.rs  user.rs  zsh.rs
src/prompt/: config.rs  git.rs  hook.rs  mod.rs  platform.rs  preexec.rs  term.rs  util.rs  vcs.rs
src/prompt/git/: mod.rs  raw.rs
src/vcs/: git.rs  mod.rs
