[project]
name = "prompt"
version = "2.0.0"
description = "Craft your shell prompt in Rust"
homepage = "https://github.com/roguePanda/prompt"
repository = "https://github.com/roguePanda/prompt.git"
license = "Apache-2.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
git2 = "~0.8"
nix = "~0.13"
dirs = "~1.0"
ansi_term = "~0.11"
structopt = "~0.2"
tico = "~1.0"
whoami = "~0.5"
humantime = "~1.2"