[project]
name = "prompt_ben"
version = "3.1.0"
description = "Rust shell prompt"
homepage = "https://github.com/bnavetta/prompt"
repository = "https://github.com/bnavetta/prompt.git"
license = "Apache-2.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
git2 = { version = "~0.8", features = ["vendored-openssl"] }
curl-sys = { version = "0.4.10", features = ["static-curl"] }
nix = "~0.13"
dirs = "~1.0"
ansi_term = "~0.11"
structopt = "~0.2"
tico = "~1.0"
whoami = "~0.5"
humantime = "~1.2"